--- a/BlazorAllTheThings/BlazorAllTheThings.Client/_Imports.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings.Client/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@using System.ComponentModel.DataAnnotations
-@using System.Net.Http
+﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,8 +6,4 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorAllTheThings
 @using BlazorAllTheThings.Client
-@using BlazorAllTheThings.Components
-@using BlazorAllTheThings.Services
-@using CounterCompany
