--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Layout/NavMenu.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Layout/NavMenu.razor
@@ -34,5 +34,10 @@
                 <span class="bi" aria-hidden="true"></span> Validation
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="bi" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
     </nav>
 </div>
