--- a/BlazorAllTheThings/BlazorAllTheThings/Components/_Imports.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using BlazorAllTheThings
 @using BlazorAllTheThings.Client
 @using BlazorAllTheThings.Components
+@using BlazorAllTheThings.Components.Extras
 @using BlazorAllTheThings.Services
-@using CounterCompany
+@using ThirdParty
