--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Layout/NavMenu.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            @{ /* TODO: 03 [Enhanced Navigation] Add 'data-permanent' to make the contents stay */ }
+            @{ /* TODO: [2] 03 [Enhanced Navigation] Add 'data-permanent' to make the contents stay */ }
             <form>
                 <input type="search" placeholder="Search..." class="form-control mb-3">
             </form>
@@ -37,6 +37,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dynamic">
+                <span class="bi" aria-hidden="true"></span> Dynamic Static
             </NavLink>
         </div>
     </nav>
