--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Validation.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Validation.razor
@@ -1,6 +1,6 @@
 ﻿@page "/validation"
 
-@{ /* TODO: 04 [Streaming] Enable streaming */ }
+@{ /* TODO: [3] 04 [Streaming] Enable streaming */ }
 @* @attribute [StreamRendering] *@
 
 <PageTitle>Validation</PageTitle>
@@ -14,7 +14,7 @@
     </div>
 }
 
-@{ /* TODO: 05 [Enhanced Navigation] Add 'Enhance' to make the contents stay */ }
+@{ /* TODO: [3] 05 [Enhanced Navigation] Add 'Enhance' to make other contents stay */ }
 <EditForm FormName="validation-form" method="post" Model="@Item" OnValidSubmit="UpdateAsync">
     <div class="mb-3">
         <label for="nameInput" class="form-label">Name</label>
