--- a/BlazorAllTheThings/BlazorAllTheThings/Components/_Imports.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/_Imports.razor
@@ -12,4 +12,4 @@
 @using BlazorAllTheThings.Components
 @using BlazorAllTheThings.Components.Extras
 @using BlazorAllTheThings.Services
-@using ThirdParty
+@using CounterCompany
