--- a/BlazorAllTheThings/BlazorAllTheThings.Client/_Imports.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings.Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorAllTheThings.Client
-@using ThirdParty
+@using CounterCompany
