--- a/BlazorAllTheThings/CounterCompany/CounterThing.razor
+++ b/BlazorAllTheThings/CounterCompany/CounterThing.razor
@@ -1,6 +1,4 @@
-﻿@namespace ThirdParty
-
-<p role="status">Current count: @currentCount</p>
+﻿<p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
