--- a/BlazorAllTheThings/BlazorAllTheThings/Components/App.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/App.razor
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="BlazorAllTheThings.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
+    @{ /* TODO: [4] 06.1 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
 </head>
 
 <body>
+    @{ /* TODO: [4] 06.1 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
