--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Validation.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Validation.razor
@@ -42,7 +42,7 @@
 
     async Task UpdateAsync()
     {
-        status = "Submitting...";
+        status = "Submitting new user...";
 
         // Simulate a long running save
         await Task.Delay(1000);
