--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/Components/Pages/Counter.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/Components/Pages/Counter.razor
@@ -2,6 +2,8 @@
 
 <h1>Counter</h1>
 
+@{ /* TODO: [8] 1 [Shared Mobile] Add `<CounterThing />` to use Razor components with mobile */ }
+
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
