--- a/BlazorAllTheThings/BlazorAllTheThings.Shared/_Imports.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings.Shared/_Imports.razor
@@ -1,1 +1,14 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using System.ComponentModel.DataAnnotations
+@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+@using BlazorAllTheThings
+@using BlazorAllTheThings.Components
+@using BlazorAllTheThings.Components.Extras
+@using BlazorAllTheThings.Services
+@using CounterCompany
