--- a/BlazorAllTheThings/BlazorAllTheThings/Components/App.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/App.razor
@@ -5,16 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    @{ /* TODO: [ 9] 3 [Shared Library] Add `_content/BlazorAllTheThings.Shared/` to all shared things */ }
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorAllTheThings.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
-    @{ /* TODO: [4] 1 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
+    @{ /* TODO: [ 4] 1 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
 </head>
 
 <body>
-    @{ /* TODO: [4] 2 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
+    @{ /* TODO: [ 4] 2 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
