--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/Components/Routes.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/Components/Routes.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(MauiProgram).Assembly">
+﻿﻿@{ /* // TODO: [10] 1 [Shared Library] Add `AdditionalAssemblies="new [] { typeof(BlazorAllTheThings.Components.Layout.MainLayout).Assembly }"` */ }
+<Router AppAssembly="@typeof(MauiProgram).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Components.Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
