--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/MainPage.xaml
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/MainPage.xaml
@@ -5,10 +5,14 @@
              x:Class="BlazorAllTheThings.Mobile.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
-        <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Routes}" />
-        </BlazorWebView.RootComponents>
-    </BlazorWebView>
+    <Grid>
+
+        <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+            <BlazorWebView.RootComponents>
+                <RootComponent Selector="#app" ComponentType="{x:Type local:Routes}" />
+            </BlazorWebView.RootComponents>
+        </BlazorWebView>
+
+    </Grid>
 
 </ContentPage>
