--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/app.css
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/app.css
@@ -65,6 +65,10 @@ h1:focus {
         content: "An error has occurred."
     }
 
+.darker-border-checkbox.form-check-input {
+    border-color: #929292;
+}
+
 .status-bar-safe-area {
     display: none;
 }
