--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Counter.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/Counter.razor
@@ -4,8 +4,11 @@
 
 <h1>Hello, Counter!</h1>
 
-@{ /* TODO: [ 4] 3 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
+@{ /* TODO: [ 4] 5 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
 @{ /* TODO: [ 5] 1 [Render Mode] Add '@rendermode="InteractiveWebAssembly"' */ }
 @{ /* TODO: [ 6] 1 [Render Mode] Add '@rendermode="InteractiveAuto"' */ }
 
 <CounterThing />
+
+@{ /* TODO: [10] 5 [Shared Mobile] Add `@inject IRenderModeAdjuster Modes` */ }
+@{ /* TODO: [10] 5 [Shared Mobile] Add `Modes.Adjust(InteractiveAuto)` */ }
