--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/DynamicStatic.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Pages/DynamicStatic.razor
@@ -10,3 +10,6 @@
 
 @{ /* TODO: [ 7] 3 [Enhanced Navigation] Add `@rendermode="InteractiveServer"` for updating static components */ }
 <StarThing />
+
+@{ /* TODO: [10] 5 [Shared Mobile] Add `@inject IRenderModeAdjuster Modes` */ }
+@{ /* TODO: [10] 5 [Shared Mobile] Add `Modes.Adjust(InteractiveServer)` */ }
