--- a/BlazorAllTheThings/BlazorAllTheThings/Components/Routes.razor
+++ b/BlazorAllTheThings/BlazorAllTheThings/Components/Routes.razor
@@ -1,5 +1,5 @@
-﻿@{ /* // TODO: [ 9] 2 [Shared Library] Add `AdditionalAssemblies="new [] { typeof(Components.Layout.MainLayout).Assembly }"` */ }
-<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="new [] { typeof(Components.Layout.MainLayout).Assembly }">
+﻿@{ /* // TODO: [ 9] 1 [Shared Library] Add `AdditionalAssemblies="new [] { typeof(Components.Layout.MainLayout).Assembly }"` */ }
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Components.Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
