--- a/BlazorAllTheThings/Before/BlazorAllTheThings/Components/App.razor
+++ b/BlazorAllTheThings/Before/BlazorAllTheThings/Components/App.razor
@@ -17,7 +17,8 @@
 <body>
     @{ /* TODO: [ 4] 2 [Render Mode] Add '@rendermode="InteractiveServer"' */ }
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
+    @{ /* TODO: [ 0] 1 [Enhance!] Enhance! */ }
+    @* <script src="_framework/blazor.web.js"></script> *@
 </body>
 
 </html>
