--- a/BlazorAllTheThings/Completed/BlazorAllTheThings/Components/App.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings/Components/App.razor
@@ -14,7 +14,8 @@
 
 <body>
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
+    @{ /* TODO: [ 0] 1 [Enhance!] Enhance! */ }
+    @* <script src="_framework/blazor.web.js"></script> *@
 </body>
 
 </html>
