--- a/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Layout/NavMenu.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject IAdditionalMenuItems Additional
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Blazor All The Things</a>
     </div>
@@ -43,5 +45,16 @@
                 <span class="bi" aria-hidden="true"></span> Dynamic Static
             </NavLink>
         </div>
+        @if (Additional is not null)
+        {
+            foreach (var item in Additional.GetMenuItems())
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@item.Url">
+                        <span class="bi" aria-hidden="true"></span> @item.Title
+                    </NavLink>
+                </div>
+            }
+        }
     </nav>
 </div>
