--- a/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Weather.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Weather.razor
@@ -1,7 +1,7 @@
 ﻿@page "/weather"
 @inject WeatherService WeatherService
 
-@attribute [StreamRendering]
+@* @attribute [StreamRendering] *@
 
 <PageTitle>Weather</PageTitle>
 
