--- a/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Counter.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Counter.razor
@@ -6,4 +6,6 @@
 
 <h1>Hello, Counter!</h1>
 
-<CounterThing @rendermode="Modes.Adjust(InteractiveAuto)" />
+@{ /* TODO: 03 Enable interactivity */ }
+@* <CounterThing @rendermode="Modes.Adjust(InteractiveAuto)" /> *@
+<CounterThing />
