--- a/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Weather.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings.Shared/Components/Pages/Weather.razor
@@ -1,6 +1,7 @@
 ﻿@page "/weather"
 @inject WeatherService WeatherService
 
+@{ /* TODO: 02 Enable streaming for dynamic content */ }
 @* @attribute [StreamRendering] *@
 
 <PageTitle>Weather</PageTitle>
