--- a/BlazorAllTheThings/Completed/BlazorAllTheThings/Components/App.razor
+++ b/BlazorAllTheThings/Completed/BlazorAllTheThings/Components/App.razor
@@ -14,7 +14,7 @@
 
 <body>
     <Routes />
-    @{ /* TODO: [ 0] 1 [Enhance!] Enhance! */ }
+    @{ /* TODO: 01 Enable blazor in the browser for enhanced navigation */ }
     @* <script src="_framework/blazor.web.js"></script> *@
 </body>
 
